# quote-displayer

./: .gitignore  README.md  index.html  package-lock.json  package.json  quotes-backup.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  keyboard.rs  lib.rs  main.rs  models.rs  popup.rs  scheduler.rs  tray.rs
src/components/: Editor.tsx  PopupDisplay.tsx  ScheduleSettings.tsx  SettingsPanel.tsx  ThemeSelector.tsx
src/styles/: app.css
