[package]
name = "quote-displayer"
version = "0.1.0"
description = "佳句隨機顯示器"
authors = ["you"]
edition = "2021"

[lib]
name = "quote_displayer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "quote-displayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
    "image-ico",
] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
arboard = "3.4"
